--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "precommit": "gulp build"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-header": "^2.0.1",
     "gulp-image-optimization": "^0.1.3",
-    "gulp-preprocess": "^2.0.0"
+    "gulp-preprocess": "^2.0.0",
+    "husky": "^0.14.3"
   }
 }
