--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ disqusShortname         = ""
 googleAnalytics         = ""
 pluralizeListTitles     = false
 disableLanguages        = [""]
+ignoreErrors            = ["error-remote-getjson"]
 
 [params]
   mainSections = ["blog", "post"]
